--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,9 @@
 {
     "presets": [
-        "stage-0",
         "babili"
     ],
     "plugins": [
         "syntax-async-functions",
-        "transform-es2015-modules-commonjs"
+        "@babel/plugin-transform-modules-commonjs"
     ]
 }
