--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
   "author": "Dan Dart <npm@dandart.co.uk>",
   "license": "ISC",
   "devDependencies": {
-    "browserify": "^16.5.0",
+    "browserify": "^16.5.1",
     "browserify-shim": "^3.8.14"
   },
   "dependencies": {
     "angular": "^1.7.9",
     "angular-route": "^1.7.9",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.0",
     "client-sessions": "^0.8.0",
-    "express": "^4.17.1",
+    "express": "^5.0.0-alpha.8",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.4.1",
-    "mongoose": "^5.8.10",
+    "jquery": "^3.5.1",
+    "mongoose": "^5.9.16",
     "password-hash": "^1.2.2",
     "popper.js": "^1.16.1",
-    "snyk": "^1.288.0"
+    "snyk": "^1.332.1"
   },
   "snyk": true
 }
